--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,48 +6,30 @@ if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
   run '${TMUX_PLUGIN_MANAGER_PATH}/tpm/bin/install_plugins'
 }
 
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'janoamaral/tokyo-night-tmux'
+# set -g @plugin 'batrdn/tokyo-night-tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'omerxx/tmux-floax'
-
-# TODO: battery, network
-set -g @tokyo-night-tmux_theme night
-set -g @tokyo-night-tmux_show_datetime 1
-set -g @tokyo-night-tmux_time_format 24H
-set -g @tokyo-night-tmux_window_id_style hsquare
-set -g @tokyo-night-tmux_pane_id_style dsquare
-set -g @tokyo-night-tmux_show_git 0
-set -g @tokyo-night-tmux_terminal_icon 
-set -g @tokyo-night-tmux_active_terminal_icon 
-set -g @tokyo-night-tmux_window_tidy_icons 0
-set -g @tokyo-night-tmux_transparent 1
-
-set -g @floax-bind '-n M-p'
-set -g @floax-border-color '#91d7e3'
+#
+# set -g @tokyo-night-tmux_theme night
+# set -g @tokyo-night-tmux_show_datetime 0
+# set -g @tokyo-night-tmux_window_id_style hsquare
+# set -g @tokyo-night-tmux_pane_id_style dsquare
+# set -g @tokyo-night-tmux_show_git 0
+# set -g @tokyo-night-tmux_terminal_icon 
+# set -g @tokyo-night-tmux_active_terminal_icon 
+# set -g @tokyo-night-tmux_window_tidy_icons 0
+# set -g @tokyo-night-tmux_transparent 1
+# set -g @tokyo-night-tmux_window_separator 
 
 set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-bind-key -T fzf-git C-h send-keys C-g C-h
-bind-key -T fzf-git C-b send-keys C-g C-b
-bind-key -T fzf-git C-s send-keys C-g C-s
-bind-key -T fzf-git C-r send-keys C-g C-r
-bind-key -T fzf-git C-f send-keys C-g C-f
-bind-key -T fzf-git C-t send-keys C-g C-t
-bind-key -T fzf-git C-e send-keys C-g C-e
-bind -n C-g switch-client -T fzf-git
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_pate}"
