--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,23 +7,12 @@ if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
 }
 
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'batrdn/tokyo-night-tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
-#
-# set -g @tokyo-night-tmux_theme night
-# set -g @tokyo-night-tmux_show_datetime 0
-# set -g @tokyo-night-tmux_window_id_style hsquare
-# set -g @tokyo-night-tmux_pane_id_style dsquare
-# set -g @tokyo-night-tmux_show_git 0
-# set -g @tokyo-night-tmux_terminal_icon 
-# set -g @tokyo-night-tmux_active_terminal_icon 
-# set -g @tokyo-night-tmux_window_tidy_icons 0
-# set -g @tokyo-night-tmux_transparent 1
-# set -g @tokyo-night-tmux_window_separator 
 
 set-window-option -g mode-keys vi
 
