--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,12 +7,27 @@ if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
 }
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/catppuccin-tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g mouse on
+set -g default-terminal "tmux-256color"
+
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "rounded"
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 set-window-option -g mode-keys vi
 
